# slm-factory

./: .ai-ascii-box-rules.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  rf  setup.sh  slf  slm-factory-intro.html  slm-factory-post.html
.claude/commands/: ship.md
benchmark/: CONFIG_GUIDE.md  FINDINGS.md
docs/: AGENT_ARCHITECTURE.md  AGENT_ROADMAP.md  architecture.html  architecture.md  autorag-integration.html  build.py  cli-reference.html  cli-reference.md  configuration.html  configuration.md  development.html  development.md  faq.md  guide.html  guide.md  index.html  integration-guide.html  integration-guide.md  modules.md  ontology-guide.html  ontology-guide.md  quick-reference.html  quick-reference.md
docs/assets/: style.css  svg-guide.css
src/rag_factory/: __main__.py  analyzer.py  augmenter.py  calibration.py  cli.py  comparator.py  config.py  contextual_retriever.py  converter.py  device.py  evaluator.py  evolve_history.py  models.py  pipeline.py  scorer.py  utils.py
src/rag_factory/exporter/: __init__.py  corpus_export.py
src/rag_factory/parsers/: html.py  hwp.py  pdf.py  ppt.py  text.py
src/rag_factory/rag/: __init__.py  corpus_profile.py  indexer.py  query_enhancer.py  server.py
src/rag_factory/rag/agent/: __init__.py  hooks.py  intent_classifier.py  (+7 more)
src/rag_factory/teacher/: __init__.py  openai_compat.py  qa_generator.py
src/rag_factory/trainer/: lora_trainer.py
src/rag_factory/tui/: __init__.py  reviewer.py
src/rag_factory/validator/: __init__.py  rules.py  similarity.py
src/slm_factory/: __init__.py  __main__.py  analyzer.py  augmenter.py  calibration.py  cli.py  comparator.py  config.py  converter.py  device.py  evaluator.py  evolve_history.py  incremental.py  models.py  pipeline.py  scorer.py  utils.py
src/slm_factory/exporter/: AGENTS.md  __init__.py  autorag_export.py  gguf_export.py  hf_export.py  ollama_export.py
src/slm_factory/ontology/: AGENTS.md  __init__.py  extractor.py  graph_store.py  models.py
src/slm_factory/parsers/: AGENTS.md  __init__.py  base.py  doc.py  docx.py  html.py  hwp.py  hwpx.py  pdf.py  pptx.py  text.py  xls.py  xlsx.py
src/slm_factory/rag/: AGENTS.md  __init__.py  indexer.py  search.py  server.py
src/slm_factory/teacher/: AGENTS.md  base.py  dialogue_generator.py  ollama.py  openai_compat.py  qa_generator.py
src/slm_factory/trainer/: AGENTS.md  __init__.py  lora_trainer.py
src/slm_factory/tui/: AGENTS.md  dashboard.py  reviewer.py  widgets.py
src/slm_factory/validator/: AGENTS.md  rules.py  similarity.py
templates/: project.yaml
tests/: AGENTS.md  conftest.py  test_agent_clarifier.py  test_agent_custom_personas.py  test_agent_hooks.py  test_agent_intent_classifier.py  test_agent_loop.py  test_agent_memory.py  test_agent_model_routing.py  test_agent_orchestrator.py  test_agent_parser.py  test_agent_personas.py  test_agent_planner.py  test_agent_reflector.py  test_agent_reviewers.py  test_agent_router.py  test_agent_scorer.py  test_agent_session.py  test_agent_skills.py  test_agent_smart_mode.py  test_agent_state.py  test_agent_tools.py  test_agent_verifier.py  test_analyzer.py  test_augmenter.py  test_autorag_export.py  test_calibration.py  test_cli.py  test_comparator.py  test_config.py  test_contextual_retriever.py  test_converter.py  test_corpus_export.py  test_corpus_profile.py  test_dashboard.py  test_device.py  test_dialogue_generator.py  test_evaluator.py  test_evolve_history.py  test_exporter.py  (+31 more)
(+36 files in other folders)
