[project]
name = "slm-factory"
version = "0.1.0"
description = "Teacher-Student Knowledge Distillation framework for building domain-specific SLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.25.0",
    # Parsing
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # ML (training)
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
]

[project.optional-dependencies]
korean = [
    "pykospacing @ git+https://github.com/haven-jeon/PyKoSpacing.git",
]
validation = [
    "sentence-transformers>=2.6.0",
]
pdfplumber = [
    "pdfplumber>=0.11.0",
]
docx = [
    "python-docx>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
slm-factory = "slm_factory.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["src"]
